--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -187,8 +187,8 @@
                   name="gender"
                   required
                 >
-                  <ion-select-option value="L">Laki-laki</ion-select-option>
-                  <ion-select-option value="P">Perempuan</ion-select-option>
+                  <ion-select-option value="pria">Pria</ion-select-option>
+                  <ion-select-option value="wanita">Wanita</ion-select-option>
                 </ion-select>
               </ion-item>
 
