--- a/src/app/semua-berita/semua-berita.page.html
+++ b/src/app/semua-berita/semua-berita.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar>
     <ion-title>Berita Saya</ion-title>
   </ion-toolbar>
 </ion-header>
