--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -49,8 +49,9 @@
     >
       <ion-thumbnail slot="start">
         <img
-          [src]="'https://ubaya.cloud/hybrid/160423183/img/' + berita.foto"
+          [src]="berita.foto.startsWith('http') ? berita.foto : 'https://ubaya.cloud/hybrid/160423183/img/' + berita.foto"
           alt="{{ berita.judul }}"
+          (error)="berita.foto = 'https://ionicframework.com/docs/img/demos/thumbnail.svg'"
         />
       </ion-thumbnail>
       <ion-label>
