--- a/src/app/semua-berita/semua-berita.page.html
+++ b/src/app/semua-berita/semua-berita.page.html
@@ -10,8 +10,8 @@
       <ion-label>Daftar Berita Anda</ion-label>
     </ion-list-header>
 
-    <ion-item-sliding *ngFor="let b of beritaSaya">
-      <ion-item button [routerLink]="['/detil-berita', b.id]">
+    <ion-item *ngFor="let b of beritaSaya">
+      <ion-item style="width: 100%;" button [routerLink]="['/detil-berita', b.id]">
         <ion-thumbnail slot="start">
           <img [src]="b.foto" *ngIf="b.foto" />
         </ion-thumbnail>
@@ -20,22 +20,19 @@
           <p>{{ b.kategori_names || 'Tanpa Kategori' }}</p>
         </ion-label>
       </ion-item>
-
-      <ion-item-options side="end">
-        <ion-item-option color="danger" (click)="hapusBerita(b.id)">
-          <ion-icon name="trash" slot="icon-only"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
+      <ion-button fill="clear" color="danger" (click)="hapusBerita(b.id)" slot="end">
+        <ion-icon name="trash"></ion-icon>
+      </ion-button>
+    </ion-item>
   </ion-list>
 
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed"> <!--//!  PAHAMI SENDIRI SAMPE BAWAH -->
     <ion-fab-button id="open-modal-tambah">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 
-  <ion-modal trigger="open-modal-tambah" #modal>
+  <ion-modal trigger="open-modal-tambah" #modal> 
     <ng-template>
       <ion-header>
         <ion-toolbar>
@@ -59,7 +56,7 @@
 
         <ion-item>
           <ion-label position="stacked">URL Foto</ion-label>
-          <ion-input [(ngModel)]="formBerita.foto" placeholder="nama_file.jpg"></ion-input>
+          <ion-input [(ngModel)]="formBerita.foto" placeholder="nama_file.jpg"></ion-input> <!--//!  UBAH AGAR BISA MASUKIN BANYAK FOTO, DAN JANGAN PAKE TEKS, PAKE FILE -->
         </ion-item>
 
         <ion-item>
